--- a/style.css
+++ b/style.css
@@ -10,9 +10,22 @@ body {
   background-color: #10091f;
   text-transform: capitalize;
   font-family: sans-serif;
-  perspective: 1000px;
+  cursor: none;
 }
-
+.cursor {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 2px solid #fff;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  transition: all 0.3s ease;
+  transition-property: background, transfrom;
+  transform-origin: 100% 100%;
+  backdrop-filter: grayscale();
+}
 nav {
   width: 100%;
   height: 60px;
@@ -116,7 +129,7 @@ nav i {
   border: none;
   letter-spacing: 2px;
   outline: none;
-  cursor: pointer;
+  cursor: none;
 }
 .shop-col-info button:hover {
   color: #2e2050;
@@ -138,7 +151,7 @@ nav i {
   color: #fff;
   border: none;
   outline: none;
-  cursor: pointer;
+  cursor: none;
   transition: 200ms;
 }
 .shop-col-btns button:hover {
